--- a/tikTacToe/play.html
+++ b/tikTacToe/play.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-   <script src="play.js"></script>
+   <script src="./play.js"></script>
   <div class="outer-container">
     <button class="hard-reset">Reset All</button>
     <p class="score-1"><span class="points"></span><span class="name"></span></p>
