--- a/tikTacToe/index.html
+++ b/tikTacToe/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tik Tac Toe</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -47,6 +48,6 @@
       </div>
     </div>
   </div>
-<script src="./play.js"></script>
+<script src="scripts.js"></script>
 </body>
 </html>
